--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4497253002'>Job Application for Per Diem Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4497253002'>Job Application for Per Diem Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.illinois.edu/academic-job-board/job-details?jobID=123473'>Job Details: Applied Health Sciences: Assistant or Associate Professor in Speech-Language Pathology - Speech and Hearing Science (123473)</a></h5> 
+<h5><a href='https://jobs.illinois.edu/academic-job-board/job-details?jobID=123473'>Job Details: Applied Health Sciences: Assistant or Associate Professor in Speech-Language Pathology - Speech and Hearing Science (123473)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -162,7 +162,7 @@
 <p><span class="badge badge-light">Lafayette Hill, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -242,11 +242,11 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Cape Girardeau, Missouri</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -361,7 +361,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States  Naples, FL</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -429,7 +429,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Hagerstown, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4466698002'>Job Application for Part-Time Speech Therapist -Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4466698002'>Job Application for Part-Time Speech Therapist -Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
